# osmocom-bb

./: .gitignore  .gitreview  Doxyfile  Doxyfile.codec  Doxyfile.codec.in  Doxyfile.core.in  Doxyfile.gsm  Doxyfile.gsm.in  Doxyfile.in  Doxyfile.vty  Doxyfile.vty.in  Makefile.am  TODO-RELEASE  configure.ac  configure.in  libosmocodec.pc.in  libosmocore.pc.in  libosmoctrl.pc.in  libosmogb.pc.in  libosmosim.pc.in  libosmovty.pc.in
doc/manuals/: Makefile  Makefile.am  osmo-gsm-manuals-dir.sh  osmocombb-usermanual-docinfo.xml  osmocombb-usermanual.adoc
doc/manuals/chapters/: scripting.adoc
include/: Makefile.am  l1a_l23_interface.h  l1ctl_proto.h  l1gprs.h  sim.h
include/osmocom/: Makefile.am
include/osmocom/codec/: codec.h
include/osmocom/core/: Makefile.am  application.h  backtrace.h  bitXXgen.h.tpl  bitcomp.h  bits.h  bitvec.h  conv.h  crc16.h  crcXXgen.h.tpl  crcgen.h  defs.h  endian.h  fsm.h  gsmtap.h  gsmtap_util.h  linuxlist.h  linuxrbtree.h  logging.h  loggingrb.h  macaddr.h  msgb.h  msgfile.h  panic.h  plugin.h  prim.h  rate_ctr.h  select.h  serial.h  signal.h  socket.h  stat_item.h  statistics.h  stats.h  strrb.h  talloc-internal.h  timer.h  timer_compat.h  utils.h  write_queue.h
include/osmocom/crypt/: Makefile.am  auth.h  gprs_cipher.h
include/osmocom/ctrl/: control_cmd.h  control_if.h  ports.h
include/osmocom/gprs/: Makefile.am  gprs_bssgp.h  gprs_bssgp_bss.h  gprs_msgb.h  gprs_ns.h  gprs_ns_frgre.h  gprs_rlc.h
include/osmocom/gsm/: Makefile.am  a5.h  abis_nm.h  apn.h  comp128.h  comp128v23.h  gan.h  gsm0341.h  gsm0411_smc.h  gsm0411_smr.h  gsm0411_utils.h  gsm0480.h  gsm0502.h  gsm0503.h  gsm0808.h  gsm48.h  gsm48_ie.h  gsm_utils.h  gsup.h  ipa.h  ipaccess.h  l1sap.h  lapd_core.h  lapdm.h  meas_rep.h  mncc.h  oap.h  rsl.h  rxlev_stat.h  sysinfo.h  tlv.h
include/osmocom/sim/: sim.h
include/osmocom/vty/: Makefile.am  buffer.h  command.h  logging.h  misc.h  ports.h  stats.h  telnet_interface.h  vector.h  vty.h
include/osmocore/: Makefile.am  bits.h  bitvec.h  crc16.h  debug.h  gsm0480.h  gsm0808.h  gsm48.h  gsm_utils.h  gsmtap.h  gsmtap_util.h  logging.h  msgb.h  rate_ctr.h  rsl.h  select.h  timer.h  tlv.h  utils.h  write_queue.h
include/osmocore/protocol/: Makefile.am  gsm_03_41.h  gsm_04_08.h  gsm_08_08.h  gsm_08_58.h  gsm_12_21.h
openbsc/src/libctrl/: Makefile.am  control_cmd.c  control_if.c
openbsc/src/libgb/: Makefile.am  common_vty.c  common_vty.h  gprs_bssgp.c  gprs_bssgp_bss.c  gprs_bssgp_util.c  gprs_bssgp_vty.c  gprs_ns.c  gprs_ns_frgre.c  gprs_ns_vty.c  libosmo-gb.map
src/: Makefile  Makefile.am  README.building  README.development  README.fernvale  application.c  backtrace.c  bitcomp.c  bits.c  bitvec.c  build.sh  conv.c  crc16.c  crcXXgen.c.tpl  debug.c  fsm.c  gprs_cipher_core.c  gsm0480.c  gsm0808.c  gsm48.c  gsm48_ie.c  gsm_utils.c  gsmtap_util.c  logging.c  logging_syslog.c  loggingrb.c  macaddr.c  msgb.c  msgfile.c  panic.c  plugin.c  prim.c  process.c  rate_ctr.c  rbtree.c  rsl.c  sciphone-load.sh  select.c  serial.c  signal.c  (+12 more)
src/codec/: Makefile.am  gsm610.c  gsm620.c  gsm660.c  gsm690.c
src/ctrl/: Makefile.am  control_cmd.c  control_if.c
src/gb/: Makefile.am  common_vty.h  gprs_bssgp.c  gprs_bssgp_bss.c  gprs_bssgp_util.c  gprs_bssgp_vty.c  gprs_ns.c  gprs_ns_frgre.c  gprs_ns_vty.c  libosmogb.map
src/gsm/: Makefile.am  a5.c  abis_nm.c  apn.c  auth_comp128v1.c  auth_comp128v23.c  auth_core.c  auth_milenage.c  comp128.c  comp128v23.c  gan.c  gea.c  gprs_cipher_core.c  gprs_gea.c  gsm0341.c  gsm0411_smc.c  gsm0411_smr.c  gsm0411_utils.c  gsm0480.c  gsm0808.c  gsm48.c  gsm48_ie.c  gsm_04_08_gprs.c  gsm_utils.c  gsup.c  ipa.c  ipaccess.c  lapd_core.c  lapdm.c  libosmogsm.map  oap.c  rsl.c  rxlev_stat.c  sysinfo.c  tlv_parser.c
src/gsm/milenage/: aes.h  aes_i.h  milenage.c  milenage.h
src/host/calypso_pll/: pll.pl
src/host/fb_tools/: bdf_to_c.py
src/host/gprsdecode/: .gitignore  Makefile.am  README  configure.ac  gprs.c  gprs.h  gsmtap.c  (+3 more)
src/shared/: .gitignore  l1gprs.c  update-libosmocore.sh
src/sim/: Makefile.am  card_fs_isim.c  card_fs_sim.c  card_fs_tetra.c  card_fs_uicc.c  card_fs_usim.c  class_tables.c  core.c  file_codec.c  gsm_int.h  reader.c  reader_pcsc.c  sim_int.h
src/target_dsp/: .gitignore
src/vty/: Makefile.am  buffer.c  command.c  logging_vty.c  stats_vty.c  telnet_interface.c  utils.c  vector.c  vty.c
src/wireshark/: gsmtap.patch  smscb.patch
tests/: Makefile.am  atlocal.in  osmo-test.in  testsuite.at
tests/a5/: Makefile.am  a5_test.c  a5_test.ok
tests/auth/: milenage_test.c  milenage_test.ok
tests/bits/: Makefile.am  bitcomp_test.c  bitcomp_test.ok  bitrev_test.c  bitrev_test.ok
tests/bitvec/: bitvec_test.c  bitvec_test.ok
tests/codec/: codec_test.c  codec_test.ok
tests/comp128/: comp128_test.c  comp128_test.ok
tests/conv/: conv_test.c
tests/fr/: fr_test.c
tests/fsm/: fsm_test.c  fsm_test.err
tests/gb/: bssgp_fc_test.c  bssgp_fc_tests.err  bssgp_fc_tests.ok  gprs_bssgp_test.c  gprs_bssgp_test.ok  gprs_ns_test.c  gprs_ns_test.ok
tests/gea/: gea_test.c  gea_test.ok
tests/gsm0408/: gsm0408_test.c
tests/gsm0808/: gsm0808_test.c
tests/gsup/: gsup_test.c
tests/kasumi/: kasumi_test.c  kasumi_test.ok
tests/lapd/: Makefile.am  lapd_test.c  lapd_test.ok
tests/logging/: logging_test.c  logging_test.err
tests/loggingrb/: loggingrb_test.c
tests/msgb/: msgb_test.c  msgb_test.ok
tests/msgfile/: Makefile.am  msgconfig.cfg  msgfile_test.c  msgfile_test.ok
tests/oap/: oap_test.c
tests/sim/: sim_test.c
tests/sms/: Makefile.am  sms_test.c  sms_test.ok
tests/smscb/: Makefile.am  gsm0341_test.c  smscb_test.c  smscb_test.ok
tests/stats/: stats_test.c
tests/strrb/: strrb_test.c
tests/timer/: Makefile.am  timer_test.c  timer_test.ok
tests/tlv/: tlv_test.c
tests/ussd/: Makefile.am  ussd_test.c  ussd_test.ok
tests/utils/: utils_test.c  utils_test.ok
tests/vty/: vty_test.c  vty_test.ok
tests/write_queue/: wqueue_test.c
utils/: Makefile.am  conv_codes_gsm.py  conv_gen.py  gen_website_doc_tree.sh  osmo-arfcn.c  osmo-auc-gen.c  osmo-sim-test.c
(+926 files in other folders)
